Laravel_yaml/group3-mysql.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: mysql
  name: mysql
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: secret
    - name: MYSQL_USER
      value: laravel
    - name: MYSQL_DATABASE
      value: laravel
    - name: MYSQL_PASSWORD
      value: secret
    image: mysql:5.7.35
    imagePullPolicy: IfNotPresent
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-2vbm4
      readOnly: true
  volumes:
  - name: default-token-2vbm4
    secret:
      defaultMode: 420
      secretName: default-token-2vbm4
