Laravel_yaml/group3-svc-laravel.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30081
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: laravel-todo
  sessionAffinity: None
  type: NodePort
