Laravel_yaml/group3-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace : laravel
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - laravel.freedomvpn.app
    secretName: laravel-group3-tls
  rules:
  - host: laravel.freedomvpn.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: laravel-service
          servicePort: 8080
